--- a/diferenciales/input/0-notacion.tex
+++ b/diferenciales/input/0-notacion.tex
@@ -5,6 +5,6 @@
     \begin{itemize}
         \item $ \mathcal{P} \equiv f(x) = g(x)$, $\mathcal{P}$ es una ecuación.
         \item $\mbf{y} = f(x)$, $\mbf{y}$ es una variable dependiente.
-        \item $\dd{y}{x} = y'$, derivada de y respecto de x.
+        \item $\dd{y}{x} = y' = y_x$, derivada de y respecto de x.
     \end{itemize}
 \end{multicols}
